--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>OurCalendly</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
 
